Update LeEco Zl1 maintainer

--- a/res/values/resurrection_device_maintainers_strings.xml
+++ b/res/values/resurrection_device_maintainers_strings.xml
@@ -550,11 +550,8 @@
   <string name="device_x2">LeEco LeMax 2</string>
   <string name="device_x2_summary">x2\nMaintainer - Andrey Shidakov (andr68rus)</string>
 
-  <string name="device_x720">LeEco LePro 3</string>
-  <string name="device_x720_summary">x720\nMaintainer - Santiago Villar (VillarLeg)</string>
-
-  <string name="device_x727">LeEco LePro 3</string>
-  <string name="device_x727_summary">x727\nMaintainer - Santiago Villar (VillarLeg)</string>
+  <string name="device_zl1">LeEco LePro 3</string>
+  <string name="device_zl1_summary">zl1\nMaintainer - Santiago Villar (VillarLeg)</string>
 
   <string name="device_t0ltexx">Samsung Galaxy Note II LTE</string>
   <string name="device_t0ltexx_summary">T0ltexx\nMaintainer - </string>
